--- a/webapp/src/app/post-login-app/common/contextual-menu/contextual-menu.component.html
+++ b/webapp/src/app/post-login-app/common/contextual-menu/contextual-menu.component.html
@@ -17,7 +17,7 @@
     style="padding-top: 20px; padding-left: 16px"
     width="146px"
     height="48px"
-    src="/assets/images/Paladin_Logo_2C.svg"
+    src="/assets/images/Paladin_Logo.svg"
   />
   <!-- asset-switcher -->
   <div class="asset-switcher-container">
@@ -36,7 +36,7 @@
         <div *ngIf="node.data?.image" class="icon">
           <img
             class="node-img"
-            src="../assets/images/{{ node.data?.image }}.svg"
+            src="/assets/icons/{{ node.data?.image }}.svg"
             alt=""
           />
         </div>
