--- a/webapp/src/app/post-login-app/post-login-app.component.css
+++ b/webapp/src/app/post-login-app/post-login-app.component.css
@@ -12,127 +12,132 @@
  * limitations under the License.
  */
 
-.pacman-logged-in-section { 
-    width: 100%;
-    min-height: 100%;
-    height: fit-content;
-    background-repeat: no-repeat;
-    background-size: cover;
-    font-size: 1em;
-    background-attachment: fixed;
-    background-position: center center;
-    transition: background .5s;
-} 
+.pacman-logged-in-section {
+  width: 100%;
+  min-height: 100%;
+  height: fit-content;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-size: 1em;
+  background-attachment: fixed;
+  background-position: center center;
+  transition: background 0.5s;
+}
 
 .post-login-header {
-    font-size: 1em;
-    flex-shrink: 0;
+  font-size: 1em;
+  flex-shrink: 0;
 }
 
 .post-login-body {
-    position: relative!important;
-    padding: 0px 28px;
+  position: relative !important;
+  /* padding: 0px 28px; */
 }
 
 .pacman-logged-in-section.is-offine {
-    filter: blur(1px) grayscale(0.9) sepia(0.2);
-    pointer-events: none;
+  filter: blur(1px) grayscale(0.9) sepia(0.2);
+  pointer-events: none;
 }
 
-.opaque-layer{
-    position: fixed;
-    display: none;
-    z-index: 17;
-    margin: auto;
-    width: calc(100%);
-    height: calc(100%);
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+.opaque-layer {
+  position: fixed;
+  display: none;
+  z-index: 17;
+  margin: auto;
+  width: calc(100%);
+  height: calc(100%);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .top-layer-page {
-    position: fixed;
-    background-color: #FBFBFB;
-    z-index: 17;
-    margin: auto;
-    width: calc(100% - 5.5em);
-    height: calc(100% - 8em);
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    border-radius: 5px;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
+  position: fixed;
+  background-color: #fbfbfb;
+  z-index: 17;
+  margin: auto;
+  width: calc(100% - 5.5em);
+  height: calc(100% - 8em);
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
 .nextLevel-close {
-    position: fixed;
-    display: block;
-    z-index: 19;
-    top: 4.5em;
-    right: 3.5em;
-    pointer-events: none;
-    opacity: 0;
-    transition: .5s ease;
-    transform: scale(0);
+  position: fixed;
+  display: block;
+  z-index: 19;
+  top: 4.5em;
+  right: 3.5em;
+  pointer-events: none;
+  opacity: 0;
+  transition: 0.5s ease;
+  transform: scale(0);
 }
 
 .layer-delete-icon {
-    width: 3em;
-    height: 3em;
-    cursor: pointer;
-    -webkit-transition: 0.4s ease;
-    transition: 0.4s ease;
+  width: 3em;
+  height: 3em;
+  cursor: pointer;
+  -webkit-transition: 0.4s ease;
+  transition: 0.4s ease;
 }
 
 .layer-delete-icon:hover {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+  -webkit-transform: rotate(0deg);
+  transform: rotate(0deg);
 }
 
 .layer-delete-icon:not(focus) {
-    -webkit-transform: rotate(90deg);
-    transform: rotate(90deg);
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 @keyframes next-level-container-open {
-    0% { transform: translateY(100px) scale(1.02) }
-    100% { transform: translateY(0) scale(1) }
+  0% {
+    transform: translateY(100px) scale(1.02);
+  }
+  100% {
+    transform: translateY(0) scale(1);
+  }
 }
 
 .next-level-routing-container.active .nextLevel-close {
-    opacity: 1;
-    pointer-events: all;
-    transform: scale(1);
+  opacity: 1;
+  pointer-events: all;
+  transform: scale(1);
 }
 
 .next-level-routing-container.active .opaque-layer {
-    display: block;
+  display: block;
 }
 
 .next-level-routing-container.active .top-layer-page {
-    animation-name: next-level-container-open;
-    animation-duration: .5s;
-    animation-timing-function: ease-in-out;
-    display: block;
+  animation-name: next-level-container-open;
+  animation-duration: 0.5s;
+  animation-timing-function: ease-in-out;
+  display: block;
 }
 
 .next-level-routing-container.inactive .top-layer-page {
-    display: none;
+  display: none;
 }
 
-.pacman-logged-in-section.is-offine .next-level-routing-container.active .nextLevel-close {
-    pointer-events: none;
+.pacman-logged-in-section.is-offine
+  .next-level-routing-container.active
+  .nextLevel-close {
+  pointer-events: none;
 }
 
 @media print {
-    .post-login-header {
-        display: none;
-    }
-    .post-login-body {
-        padding-bottom: 0%
-    }
+  .post-login-header {
+    display: none;
+  }
+  .post-login-body {
+    padding-bottom: 0%;
+  }
 }
-
