--- a/webapp/src/app/shared/table-list/table-list.component.css
+++ b/webapp/src/app/shared/table-list/table-list.component.css
@@ -12,213 +12,213 @@
  * limitations under the License.
  */
 
-.table-container{
-    width: 100% ;
-    border-collapse: separate;
-    width: 100%;
-    border-left: 2em solid #FBFBFB;
-    border-right: 2em solid #fbfbfb;
+.table-container {
+  width: 100%;
+  border-collapse: separate;
+  width: 100%;
+  border-left: 2em solid #fbfbfb;
+  border-right: 2em solid #fbfbfb;
 }
 
-.table-heading{
-    border-bottom: 1px solid #d6e2f1;
-    font-size: .84em;
+.table-heading {
+  border-bottom: 1px solid #d6e2f1;
+  font-size: 0.84em;
 }
-.table-heading th{
-    border-bottom: 1px solid #d6e2f1;
-    text-align: initial;
-    max-width: 30em;
-    text-overflow: ellipsis;
-    font-family: var(--text-medium-font-family);
-    letter-spacing: .3px;
-    overflow: hidden;
-    white-space: nowrap;
-    text-transform: capitalize;
-    position: relative;
-    top:0;
-    padding: 2.5em 1.1em .5em;
-    background: #fbfbfb;
+.table-heading th {
+  border-bottom: 1px solid #d6e2f1;
+  text-align: initial;
+  max-width: 30em;
+  text-overflow: ellipsis;
+  font-family: var(--text-medium-font-family);
+  letter-spacing: 0.3px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-transform: capitalize;
+  position: relative;
+  top: 0;
+  padding: 2.5em 1.1em 0.5em;
+  background: #fbfbfb;
 }
-.table-heading th:first-child{
-    box-shadow: -5px 0 0 0 #fbfbfb;
+.table-heading th:first-child {
+  box-shadow: -5px 0 0 0 #fbfbfb;
 }
-.table-heading th:last-child{
-    box-shadow: 5px 0 0 0 #fbfbfb;
+.table-heading th:last-child {
+  box-shadow: 5px 0 0 0 #fbfbfb;
 }
-.container{
-    padding-bottom: 1em;
-    height: 100%;
-    overflow: auto;
+.container {
+  padding-bottom: 1em;
+  height: 100%;
+  overflow: auto;
 }
 
-.table-body{
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,.15);
-    background: #fff;
+.table-body {
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
+  background: #fff;
 }
-.table-body td{
-    padding: 1.1em;
-    text-align: initial;
-    max-width: 30em;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    vertical-align: middle;
+.table-body td {
+  padding: 1.1em;
+  text-align: initial;
+  max-width: 30em;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  vertical-align: middle;
 }
-.inner-element{
-    transition: .5s;
-    padding: 2em;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+.inner-element {
+  transition: 0.5s;
+  padding: 2em;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-.inside-table{
-    width:100%;
+.inside-table {
+  width: 100%;
 }
-.space-element{
-    padding:.5em;
+.space-element {
+  padding: 0.5em;
 }
-.expand-element{
-    box-shadow: 0px 2px 3px 0 rgba(0,0,0,.15);
-    border-top: 1px solid #d6e2f1;
-    background: #fff;
-    transition: .8s;
+.expand-element {
+  box-shadow: 0px 2px 3px 0 rgba(0, 0, 0, 0.15);
+  border-top: 1px solid #d6e2f1;
+  background: #fff;
+  transition: 0.8s;
 }
 
 .list-sortable-arrow:before,
 .list-sortable-arrow:after {
-    content: "";
-    border-width: 0 4px 4px;
-    border-left: 3px solid transparent;
-    border-right: 3px solid transparent;
-    border-style: solid;
-    border-color: #999 transparent;
-    visibility: visible;
-    left: 5px;
-    top: 50%;
-    position: absolute;
-    transition: 0.28s ease;
+  content: "";
+  border-width: 0 4px 4px;
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
+  border-style: solid;
+  border-color: #999 transparent;
+  visibility: visible;
+  left: 5px;
+  top: 50%;
+  position: absolute;
+  transition: 0.28s ease;
 }
 
 .list-sortable-arrow:before {
-    border-top: 0;
-    border-bottom: 3px solid #999;
-    margin-top: -4px;
+  border-top: 0;
+  border-bottom: 3px solid #999;
+  margin-top: -4px;
 }
 
 .list-sortable-arrow:after {
-    border-bottom: 0;
-    border-top: 3px solid #999;
-    margin-top: 1px;
+  border-bottom: 0;
+  border-top: 3px solid #999;
+  margin-top: 1px;
 }
 
 .up-arr-shown.list-sortable-arrow:after {
-    opacity: 0;
-    visibility: hidden;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .down-arr-shown.list-sortable-arrow:before {
-    opacity: 0;
-    visibility: hidden;
+  opacity: 0;
+  visibility: hidden;
 }
 
 .head-cells::selection {
-    background-color: transparent;
+  background-color: transparent;
 }
-.head-cells{
-    cursor: pointer;
+.head-cells {
+  cursor: pointer;
 }
 .pk-search-container {
-    background-color: #eff3f6;
-    padding: 0.66em 0em .66em 1.6em;
-    border: 1px solid #eaeaea;
-    flex-shrink: 0;
+  background-color: #eff3f6;
+  padding: 0.66em 0em 0.66em 1.6em;
+  border: 1px solid #eaeaea;
+  flex-shrink: 0;
 }
 .input-bar {
-    padding-right: 1.66em;
-    position: relative;
+  padding-right: 1.66em;
+  position: relative;
 }
 
 .input-bar input {
-    width: 21.25em;
-    height: 2.1em;
-    border-radius: var(--border-radius);
-    background-color: #ffffff;
-    border: solid 1px #c3cbd7;
-    padding: 0 1em 0em 2.2em;
-    font-size: 0.87em;
-    color: #5a616b;
-    transition: 0.3s ease;
+  width: 21.25em;
+  height: 2.1em;
+  border-radius: var(--border-radius);
+  background-color: var(--background-white);
+  border: solid 1px #c3cbd7;
+  padding: 0 1em 0em 2.2em;
+  font-size: 0.87em;
+  color: #5a616b;
+  transition: 0.3s ease;
 }
 
 .input-bar input:focus {
-    width: 31.25em;
+  width: 31.25em;
 }
 
-.input-bar input:focus+.search-icon {
-    transform: rotateZ(360deg);
+.input-bar input:focus + .search-icon {
+  transform: rotateZ(360deg);
 }
-.input-bar input:focus+.search-icon {
-    transform: rotateZ(360deg);
+.input-bar input:focus + .search-icon {
+  transform: rotateZ(360deg);
 }
 
 .search-icon img {
-    height: 1em;
-    width: 1em;
+  height: 1em;
+  width: 1em;
 }
 
 .search-icon {
-    top: 0;
-    left: 0.5em;
-    bottom: 0;
-    margin: auto 0;
-    pointer-events: none;
-    transition: 0.3s ease;
+  top: 0;
+  left: 0.5em;
+  bottom: 0;
+  margin: auto 0;
+  pointer-events: none;
+  transition: 0.3s ease;
 }
-.input-bar input:focus+.search-icon {
-    transform: rotateZ(360deg);
+.input-bar input:focus + .search-icon {
+  transform: rotateZ(360deg);
 }
 
 .search-icon img {
-    height: 1em;
-    width: 1em;
+  height: 1em;
+  width: 1em;
 }
 
 .select-filter-btn {
-    height: 1em;
-    width: 1em;
-    border: 1px solid #e4e4e4;
-    border-radius: 2px;
-    margin-right: 0.65em;
-    cursor: pointer;
+  height: 1em;
+  width: 1em;
+  border: 1px solid #e4e4e4;
+  border-radius: 2px;
+  margin-right: 0.65em;
+  cursor: pointer;
 }
-.right-text{
-    padding: 0 2em;
-    font-size: 1.08em;;
+.right-text {
+  padding: 0 2em;
+  font-size: 1.08em;
 }
-.right-number{
- font-family: var(--text-medium-font-family);
+.right-number {
+  font-family: var(--text-medium-font-family);
 }
-.cursor-element{
-    cursor: pointer;
+.cursor-element {
+  cursor: pointer;
 }
 
 .help-icon {
-    margin-left: 3px;
-    vertical-align: text-bottom;
+  margin-left: 3px;
+  vertical-align: text-bottom;
 }
 
 .help-icon:hover {
-    color: magenta;
+  color: magenta;
 }
 .copy-object {
-    pointer-events: none;
-    transition: 0.2s ease;
-    opacity: 0;
+  pointer-events: none;
+  transition: 0.2s ease;
+  opacity: 0;
 }
 
 .each-cell-list-row:hover .copy-object {
-    opacity: 1;
-    pointer-events: auto;
+  opacity: 1;
+  pointer-events: auto;
 }
